--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,7 +10,7 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main" ]
+#    branches: [ "main" ]
 #  pull_request:
 #    branches: [ "main" ]
 
@@ -19,38 +19,16 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    # This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-    # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-    # This workflow uses actions that are not certified by GitHub.
-    # They are provided by a third-party and are governed by
-    # separate terms of service, privacy policy, and support
-    # documentation.
-
-    name: Java CI with Maven
-
-    on:
-      push:
-        branches: [ "main" ]
-    #  pull_request:
-    #    branches: [ "main" ]
-
-    jobs:
-      build:
-
-        runs-on: ubuntu-latest
-
-        steps:
-          - uses: actions/checkout@v2
-          - name: Set up JDK 1.8
-            uses: actions/setup-java@v1
-            with:
-              java-version: 1.8
-          - name: Build with Maven
-              run: mvn -B package --file pom.xml
-          - name: Run tests
-              run: mvn -B test --file pom.xml
-
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 19
+        uses: actions/setup-java@v3
+        with:
+          java-version: '19'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
 
       # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
       - name: Update dependency graph
