--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,7 +10,7 @@ name: Java CI with Maven
 
 on:
   push:
-#    branches: [ "main" ]
+    branches: [ "main" ]
 #  pull_request:
 #    branches: [ "main" ]
 
@@ -21,10 +21,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 19
+      - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          java-version: '19'
+          java-version: '11'
           distribution: 'temurin'
           cache: maven
       - name: Build with Maven
