--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,8 +27,8 @@ jobs:
           java-version: '16'
           distribution: 'temurin'
           cache: maven
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
+      #      - name: Build with Maven
+      #        run: mvn -B package --file pom.xml
       - name: Run tests with Maven
         run: mvn -B test --file pom.xml
 
