--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,7 +30,7 @@ jobs:
       #      - name: Build with Maven
       #        run: mvn -B package --file pom.xml
       - name: Run tests with Maven
-        run: mvn -B test --file pom.xml
+        run: mvn -B test -DskipITs --file pom.xml
 
 
       # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
